# ParcelScope

parcelviz/: .env.example  README.md  pyproject.toml
parcelviz/config/: sources.yaml
parcelviz/parcelviz/: __init__.py  __main__.py  api.py  cache.py  cli.py  config_loader.py  crs.py  geocode.py  mapcompose.py  models.py  parcels.py  pipeline.py  settings.py  utils.py
parcelviz/parcelviz/layers/: __init__.py  arcgis.py  tiles.py  wms.py
parcelviz/parcelviz/parcelviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
parcelviz/tests/: __init__.py  test_pipeline.py
parcelviz/web/: index.html  main.js  styles.css
